--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
   <h1>
     What is up my dude?
   </h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium soluta aut quas sed nam quae quia quaerat
-    fuga quibusdam ad, voluptatibus explicabo. Itaque, aperiam quas dignissimos natus aspernatur corrupti id.</p>
+  <p>You have found the most excellent Web-Hosted Ledger of Journals of the individual known as Nathaniel Wheeler.</p>
+  <p>Here are some bullet points that illustrate aspects of my personality:</p>
+  <ul>
+    <li>I was recently married.</li>
+    <li>The honeymoon was Europe.</li>
+    <li>It was pretty great.</li>
+    <li><em>Utrecht, Netherlands</em> is a pretty nice place.</li>
+  </ul>
 </body>
 
 </html>
