--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <h1>
     What is up my dude?
   </h1>
-  <p>You have found the most excellent Web-Hosted Ledger of Journals of the individual known as Nathaniel Wheeler.</p>
+  <p>You have found the most excellent Web-Hosted Ledger of Journals of the individual known as Nathaniel Wheeler for
+    Boise CodeWorks.</p>
   <p>Here are some bullet points that illustrate aspects of my personality:</p>
   <ul>
     <li>I was recently married.</li>
@@ -20,6 +21,7 @@
     <li>It was pretty great.</li>
     <li><em>Utrecht, Netherlands</em> is a pretty nice place.</li>
   </ul>
+  <p>I really want to learn how force HTML put double spaces after full stops. Because that is the correct way.</p>
 </body>
 
 </html>
