added green on black styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <li>It was pretty great.</li>
     <li><em>Utrecht, Netherlands</em> is a pretty nice place.</li>
   </ul>
-  <p>I really want to learn how force HTML put double spaces after full stops. Because that is the correct way.</p>
+  <p>I really want to learn how force HTML put double spaces after full stops. Because that is the correct way.
+  </p>
 </body>
 
 </html>
