--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nathan's CodeWorks Ledger of Journals</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="green-on-black">
   <h1>
     What is up my dude?
   </h1>
@@ -21,7 +23,7 @@
     <li>It was pretty great.</li>
     <li><em>Utrecht, Netherlands</em> is a pretty nice place.</li>
   </ul>
-  <p>I really want to learn how force HTML put double spaces after full stops. Because that is the correct way.
+  <p>I really want to learn how to force HTML to put double spaces after full stops. Because that is the correct way.
   </p>
 </body>
 
