--- a/index.html
+++ b/index.html
@@ -14,17 +14,31 @@
   <h1>
     What is up my dude?
   </h1>
-  <p>You have found the most excellent Web-Hosted Ledger of Journals of the individual known as Nathaniel Wheeler for
-    Boise CodeWorks.</p>
-  <p>Here are some bullet points that illustrate aspects of my personality:</p>
-  <ul>
-    <li>I was recently married.</li>
-    <li>The honeymoon was Europe.</li>
-    <li>It was pretty great.</li>
-    <li><em>Utrecht, Netherlands</em> is a pretty nice place.</li>
-  </ul>
-  <p>I really want to learn how to force HTML to put double spaces after full stops. Because that is the correct way.
-  </p>
+  <section class="margin-stuff">
+    <p>You have found the most excellent Web-Hosted Ledger of Journals of the individual known as Nathaniel Wheeler for
+      Boise CodeWorks.</p>
+    <p>Here are some bullet points that illustrate aspects of my personality:</p>
+    <ul>
+      <li>I was recently married.</li>
+      <li>The honeymoon was Europe.</li>
+      <li>It was pretty great.</li>
+      <li><em>Utrecht, Netherlands</em> is a pretty nice place.</li>
+    </ul>
+    <p>I really want to learn how to force HTML to put double spaces after full stops. Because that is the correct way.
+    </p>
+  </section>
+  <section class="margin-stuff">
+    <h1># 19-08-16-F</h1>
+    <p>I am now at the end of two weeks in the Boise CodeWorks program. I have learned many things, such as why
+      Bootstrap is so widely used. I quite like how the 12-column I have learned that often, it's better to just get
+      some javascript to program your
+      webpage <em>for</em> you by using HTML templates. I like this trick quite a lot, and I hope to utilize it
+      efficiently.</p>
+    <p>Arrays have been a struggle. Looping them efficiently even more so.</p>
+
+  </section>
+
+
 </body>
 
 </html>
